--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -81,7 +81,8 @@
     <link rel="stylesheet" href="assets/userAssets/css/plugins/jquery-ui.css">
     <link rel="stylesheet" href="assets/userAssets/css/plugins/select2.min.css">
     <link rel="stylesheet" href="assets/userAssets/css/style.css">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -101,19 +102,19 @@
                         <div class="main-menu menu-lh-1 main-menu-padding-1">
                             <nav>
                                 <ul>
-                                    <li class="position-static"><a class="active" href="/">Home</a>
+                                    <li class="position-static"><a href="/">Home</a>
                                         
                                     </li>
                                     <li><a href="#">Pages <i class="fa fa-angle-down"></i></a>
                                         <ul class="sub-menu-width">
-                                            <li><a href="about-us.html">About Us</a></li>
-                                            <li><a href="contact-us.html">Contact Page</a></li>
-                                            <li><a href="comming-soon.html">Comming Soon 01</a></li>
-                                            <li><a href="comming-soon-2.html">Comming Soon 02</a></li>
-                                            <li><a href="faq.html">FAQ</a></li>
+                                            <li><a href="/accountDetails">Accounts</a></li>
+                                            <li><a href="/productCart">Cart</a></li>
+                                            <li><a href="/viewOrder">Orders</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="shop-fullwide.html">Brands <i class="fa fa-angle-down"></i></a>
+                                    
+                                    <li><a href="/allProducts">All Products</a></li>
+                                    <!-- <li><a href="shop-fullwide.html">Brands <i class="fa fa-angle-down"></i></a>
                                         <ul class="sub-menu-width">
                                             <li><a href="shop-fullwide.html">Nike</a></li>
                                             <li><a href="shop-sidebar.html">American Tourister</a></li>
@@ -122,7 +123,7 @@
                                             <li><a href="shop-2-col.html">Puma</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="shop-collection-1.html">Collections</i> </a></li>
+                                    <li><a href="shop-collection-1.html">Collections</i> </a></li> -->
                                 </ul>
                             </nav>
                         </div>
@@ -130,7 +131,7 @@
                     <div class="col-xl-2 col-lg-2">
                         <div class="header-right-wrap header-right-flex">
                             <div class="same-style header-wishlist">
-                                <a href="wishlist"><i class="fa fa-heart-o"></i></a>
+                                <a href="/wishlist"><i class="fa fa-heart-o"></i></a>
                             </div>
                             <div class="same-style cart-wrap">
                                 <a href="/" class="cart-active">
@@ -138,12 +139,12 @@
                                     <!-- <span class="count-style">02</span> -->
                                 </a>
                             </div>
-                            <div class="same-style header-search">
+                            <!-- <div class="same-style header-search">
                                 <a class="search-active" href="#">
                                     <i class="dlicon ui-1_zoom"></i>
                                 </a>
-                            </div>
-                            <!-- <div class="same-style header-off-canvas">
+                            </div> 
+                            <div class="same-style header-off-canvas">
                                 <ul class="sub-menu-width position-static" >
                                     <li><a href="login">Login</a></li>
                                     <li><a href="signup">SignUp</a></li>
