--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -38,9 +38,9 @@
                         <a href="#shop-2" data-bs-toggle="tab"><i class="dlicon design_bullet-list-69"></i><p>List </p></a>
                         
                     </div>
-                    <div class="shop-filter ml-50">
+                    <!-- <div class="shop-filter ml-50">
                         <a class="shop-filter-active" href="#">Filters <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></a>
-                    </div>
+                    </div> -->
                     <div class="shop-short-by ml-50">
                         <span>Sort by <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></span>
                         <ul>
@@ -55,9 +55,8 @@
                     </div>
                 </div>
             </div>
-            <div class="product-filter-wrapper">
+            <!-- <div class="product-filter-wrapper">
                 <div class="row">
-                    <!-- Product Filter -->
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
                             <h5>Price</h5>
@@ -70,7 +69,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Product Filter -->
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
                             <h5>Size</h5>
@@ -86,7 +84,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Product Filter -->
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
                             <h5>Color</h5>
@@ -102,7 +99,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Product Filter -->
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
                             <h5>Brands</h5>
@@ -118,13 +114,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="tab-content jump-3 pt-30">
                 <div id="shop-1" class="tab-pane active">
                     <div class="row">
                           
                         <% for(let i=0; i <proData.length ; i++){ %>
-                    
                             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                                 <div class="product-wrap mb-50">
                                     <div class="product-img default-overlay mb-25" >
