--- a/views/user/userAccountDetails.ejs
+++ b/views/user/userAccountDetails.ejs
@@ -23,6 +23,7 @@
                             <a href="/accountDetails"class="show active"> Account Details</a>
                             <a href="/orders"> Orders</a>
                             <a href="/address"> Address</a>
+                            <a href="/wallet"> Wallet</a>
                             
                         </div> 
                         
