--- a/views/user/userAddAddress.ejs
+++ b/views/user/userAddAddress.ejs
@@ -23,6 +23,7 @@
                             <a href="/accountDetails"> Account Details</a>
                             <a href="/orders"> Orders</a>
                             <a href="/address" class="show active"> Address</a>
+                            <a href="/wallet"> Wallet</a>
                             
                         </div> 
 
