--- a/views/user/usereditAddress.ejs
+++ b/views/user/usereditAddress.ejs
@@ -37,6 +37,7 @@
             <a href="/accountDetails"> Account Details</a>
             <a href="/orders"> Orders</a>
             <a href="/address" class="show active"> Address</a> 
+            <a href="/wallet"> Wallet</a>
         </div> 
         <div class="tab-content" id="myaccountContent">
             <div class="tab-pane fade nav show active" id="address" role="tabpanel">
