--- a/views/admin/userList.ejs
+++ b/views/admin/userList.ejs
@@ -30,6 +30,11 @@
                     </a>
                    
                 </li>
+                <li class="menu-item "> 
+                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-home"></i>
+                        <span class="text">Coupon</span>
+                    </a>
+                </li>
 
                 <li class="menu-item  active">
                     <a class="menu-link" href="/admin/userList"> <i class="icon material-icons md-people"></i>
