--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -102,7 +102,7 @@
                                             <a style="background-color: rgb(17, 17, 17);" href="+" title="Buy now" href="/buyNow">Buy Now</a>
                                         </div> -->
                                         <div class="product-details-wishlist">
-                                            <a title="Add to wishlist" href="#"><i class="fa fa-heart"></i></a>
+                                            <a title="Add to wishlist" id="addToWishlistBtn" onclick="addToWishlist()"><i class="fa fa-heart"></i></a>
                                         </div>  
                                     </div>   
                                     <div class="product-details-info">
@@ -420,58 +420,78 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
 
-function addToCart(){
-  
+function addToCart() {
     console.log("addToCart Ajax is working")
     const prodQuantity = document.getElementById("quantityNum").value
     const productId = document.getElementById("proId").value
     //AJAX request
     $.ajax({
-            url: "/addToCart",
-            method: "post",
-            data: {
-                prodQuantity,
-                productId,
-                
-            },
-            success: (response) => {
-    if (response.status === "success") {
-        Swal.fire({
-            icon: "success",
-            title: "Product added to cart",
-            showConfirmButton: false,
-            timer: 2000,
-        }).then((result) => {
-            document.getElementById("addToCartButton").innerText = "View Cart ";
-            window.location.href = "/productCart";
-        });
-    } else if (response.status === "alreadyInCart") {
-        Swal.fire({
-            icon: "info",
-            title: "Product already in cart",
-            showConfirmButton: false,
-            timer: 2000,
-        });
-    } else if (response.status === "login") {
-        Swal.fire({
-            text: "You want to login the page?!",
-            icon: "warning",
-            showCancelButton: true,
-            confirmButtonColor: "#3085d6",
-            cancelButtonColor: "#d33",
-            confirmButtonText: "Go to login!"
-        }).then((result) => {
-            if (result.isConfirmed) {
-                window.location.href = "/login";
+        url: "/addToCart",
+        method: "post",
+        data: {
+            prodQuantity,
+            productId,
+        },
+        success: (response) => {
+            if (response.status === "success") {
+                Swal.fire({
+                    icon: "success",
+                    title: "Product added to cart",
+                    showConfirmButton: false,
+                    timer: 2000,
+                })
+                .then((result) => {
+                //     document.getElementById("addToCartButton").innerText = "View Cart ";
+                    window.location.href = "/productCart";
+                });
+            } else if (response.status === "alreadyInCart") {
+                Swal.fire({
+                    icon: "info",
+                    title: "Product already in cart",
+                    showConfirmButton: false,
+                    timer: 2000,
+                });
+            }else if(response.status === "outOfStock"){
+                Swal.fire({
+                    icon: "info",
+                    title: "Sorry!.. Out of stock",
+                    showConfirmButton: false,
+                    timer: 2000,
+                });
             }
-        });
-    }
+        }
+
+    })
 }
 
-        })
+
+function addToWishlist(){
+    const productId = document.getElementById("proId").value
+    alert(productId);
+    $.ajax({
+        method: "POST",
+        url: "/wishlist",
+        data: {
+            productId
+        },
+        success:(response)=>{
+            if(response.status === "success"){
+                Swal.fire({
+                    icon: "success",
+                    title: "Product added to wishlist",
+                    showConfirmButton: false,
+                    timer: 2000,
+                })
+            }else if(response.status === "alreadyAdded"){
+                Swal.fire({
+                    icon: "info",
+                    title: "Product already in wishlist",
+                    showConfirmButton: false,
+                    timer: 2000,
+                });
+            }
+        }
+    })
 }
-
-
-
 </script>
         <%- include("../partials/footer.ejs") %>
